# v2x_software

./: CMakeLists.txt  README.md
src/: v2xd.cc
src/config/: v2x_config.json
src/l2/: l2_interface.h  l2_interface_mgr.h
src/l2/raw_eth/: raw_eth.cc  raw_eth.h
